force-app/main/default/objects/Document_Checklist__c/Document_Checklist__c.object-meta.xml
<CustomObject>
    <label>Document Checklist</label>
    <nameField>
        <displayFormat>DCL-{000000}</displayFormat>
        <label>Document Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>