force-app/main/default/objects/Document_Checklist__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description>Date when the document was received from the client.</description>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>