force-app/main/default/objects/Document_Checklist__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Date when the document expires and must be renewed.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>